plugins/github/src/snapshots/balerix_plugin_github__prompt__tests__a_review_renders_once_with_the_header_and_skips_an_empty_one.snap
---
source: src/prompt.rs
expression: m
---
Review by @bob: changes requested, at 3f9c2a1
Review against main at 3f9c2a1 (1 comment)

src/lib.rs line 42 (new):
> +    let x = foo();
This unwrap can panic.

Overall:
Close.
