plugins/github/src/snapshots/balerix_plugin_github__prompt__tests__the_first_prompt_for_a_pr_and_a_resume.snap
---
source: src/prompt.rs
expression: first(&s)
---
You are attached to acme/payments pull request #34: Refunds double-post
https://github.com/acme/payments/issues/12

Branch: feature/refunds (into main)

Earlier work on this pull request is on branch feature/refunds; continue from it.

When a refund is retried it posts twice.

Steps: …
